--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/principal.css">
-    <link rel="stylesheet" href="/styles/screens.css" media="screen and (min-width:768px)">
+    <link rel="stylesheet" href="styles/principal.css">
+    <link rel="stylesheet" href="styles/screens.css" media="screen and (min-width:768px)">
     <title>SW - ReactAttack</title>
 </head>
 
 <body>
+    <div class="painel-banner">
+        <img src="imagens/banner-sw2.png" alt="">
+    </div>
     <header>
+
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
             <nav><a href="#">Home</a></nav>
@@ -28,47 +32,47 @@
             <h2>BEM VINDO INVOCADOR!</h2>
             <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
         </section>
+        <hr>
         <section class="resumo">
-            <img src="#" alt="SW Ilustração">
+            <img src="imagens/banner-luta.png" alt="" class="imghome">
+
             <h3>Breve resumo do Jogo!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, consectetur! Reiciendis quod, magnam
-                porro officiis veniam voluptas odio sequi, nulla laudantium, ab cum dignissimos ipsam dolor voluptatem?
-                Vitae, quaerat voluptates!
+            <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena.
+                Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro
+                para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
+            <p>
+                O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em
+                uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.
             </p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius blanditiis ad doloribus quasi magni quos
-                harum? Animi quo deserunt id laudantium magnam quasi architecto aliquid! Nulla deleniti odit labore
-                aliquid?
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil quae dolore dolorum est, aliquid, quod
-                iusto tenetur, sunt suscipit praesentium reiciendis fuga error ipsa magnam dolores neque fugiat quisquam
-                veritatis!
+                Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o bom e
+                velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas vezes
+                você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.
             </p>
         </section>
+        <hr>
         <section class="video-home">
             <video src="#"></video>
         </section>
-        
     </main>
     <section class="contato">
-        <div>
-            <img src="#" alt="logo-reactattack">
+        <div id="contato2">
+            <img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact">
+            <div class="sobrenos">
+                <p>Guild - ReactAttack</p>
+                <p>Sobre nós</p>
+                <p>Contato</p>
+                <p>Idealizadores</p>
+            </div>
         </div>
-        <div>
-            <p>Guild - ReactAttack</p>
-            <p>Sobre nós</p>
-            <p>Contato</p>
-            <p>Idealizadores</p>
-        </div>
-        <div>
-            <img src="#" alt="loja-appstore">
-            <img src="#" alt="loja-googleplay">
-        </div>
+        <img src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore">
+        <img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay">
     </section>
-    <footer><p>Copyright 2023 @ReactAttack - Open License</p></footer>
+    <footer>
+        <p>Copyright 2023 @ReactAttack - Open License</p>
+    </footer>
 
-    <source src="/scripts/menuHamb.js">
+    <script src="scripts/menuHamb.js"></script>
 </body>
 
 </html>
