correção de bugs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="painel-banner">
-        <img src="imagens/banner-sw2.png" alt="">
+        <img src="#" alt="">
     </div>
     <header>
 
@@ -57,16 +57,16 @@
     </main>
     <section class="contato">
         <div id="contato2">
-            <img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact">
+            <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
             <div class="sobrenos">
-                <p>Guild - ReactAttack</p>
-                <p>Sobre nós</p>
-                <p>Contato</p>
-                <p>Idealizadores</p>
+                <p><a href="#">Guild - ReactAttack</a></p>
+                <p><a href="#">Sobre Nós</a></p>
+                <p><a href="#">Contato</a></p>
+                <p><a href="#">Idealizadores</a></p>
             </div>
         </div>
-        <img src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore">
-        <img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay">
+        <a href=""><img src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore"></a>
+        <a href=""><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay"></a>
     </section>
     <footer>
         <p>Copyright 2023 @ReactAttack - Open License</p>
