--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <img src="#" alt="">
     </div>
     <header>
-
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
             <nav><a href="#">Home</a></nav>
@@ -36,23 +35,31 @@
         <section class="resumo">
             <img src="imagens/banner-luta.png" alt="" class="imghome">
 
-            <h3>Breve resumo do Jogo!</h3>
+            <h3>Breve Resumo do Jogo!</h3>
             <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena.
                 Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro
                 para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
             <p>
-                O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em
+                O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática.
+                Em
                 uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.
             </p>
             <p>
-                Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o bom e
-                velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas vezes
+                Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o
+                bom e
+                velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas
+                vezes
                 você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.
             </p>
         </section>
         <hr>
-        <section class="video-home">
-            <video src="#"></video>
+        <section class="video">
+            <div id="video-home">
+                <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
+                    title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </section>
     </main>
     <section class="contato">
@@ -65,8 +72,10 @@
                 <p><a href="#">Idealizadores</a></p>
             </div>
         </div>
-        <a href=""><img src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore"></a>
-        <a href=""><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay"></a>
+        <a href="https://apps.apple.com/us/app/summoners-war/id852912420" target="_blank"><img
+                src="imagens/loja-appstore.png" alt="loja-appstore" class="imgappstore"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.com2us.smon.normal.freefull.google.kr.android.common&hl=pt_BR&gl=US&pli=1"
+            target="_blank"><img src="imagens/loja-googleplay.png" alt="loja-googleplay" class="imggoogleplay"></a>
     </section>
     <footer>
         <p>Copyright 2023 @ReactAttack - Open License</p>
