criação da pagina guia do iniciante

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/principal.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/guia-tricaru.css">
     <link rel="stylesheet" href="styles/screens.css" media="screen and (min-width:768px)">
     <title>SW - ReactAttack</title>
 </head>
@@ -27,40 +26,14 @@
         </menu>
     </header>
     <main>
-        <section class="comunicado">
-            <h2>BEM VINDO INVOCADOR!</h2>
-            <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
-        </section>
+        <section></section>
         <hr>
-        <section class="resumo">
-            <img src="imagens/banner-luta.png" alt="" class="imghome">
-
-            <h3>Breve Resumo do Jogo!</h3>
-            <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena.
-                Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro
-                para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
-            <p>
-                O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática.
-                Em
-                uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.
-            </p>
-            <p>
-                Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o
-                bom e
-                velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas
-                vezes
-                você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.
-            </p>
-        </section>
+        <section></section>
         <hr>
-        <section class="video">
-            <div id="video-home">
-                <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
-                    title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-        </section>
+        <section></section>
+        <hr>
+        <section></section>
+        <hr>
     </main>
     <section class="contato">
         <div id="contato2">
@@ -80,8 +53,6 @@
     <footer>
         <p>Copyright 2023 @ReactAttack - Open License</p>
     </footer>
-
     <script src="scripts/menuHamb.js"></script>
 </body>
-
 </html>
