remoção de barra horizontal

--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <title>SW - ReactAttack</title>
 </head>
 <body>
-    <div class="painel-banner">
-        <img src="#" alt="">
+    <div class="painel-geral">
+        <div class="painel-banner">
+            <img src="#" alt="">
+        </div>
+        <header>
+            <span class="material-icons" id="menuHamb">menu</span>
+            <menu id="menu">
+                <nav><a href="#">Home</a></nav>
+                <nav><a href="#">Guia do Iniciante</a></nav>
+                <nav><a href="#">Guia Trícaru</a></nav>
+                <nav><a href="#">Mobs PVE</a></nav>
+                <nav><a href="#">Mobs PVP</a></nav>
+                <nav><a href="#">Runas</a></nav>
+            </menu>
+        </header>
     </div>
-    <header>
-        <span class="material-icons" id="menuHamb">menu</span>
-        <menu id="menu">
-            <nav><a href="#">Home</a></nav>
-            <nav><a href="#">Guia do Iniciante</a></nav>
-            <nav><a href="#">Guia Trícaru</a></nav>
-            <nav><a href="#">Mobs PVE</a></nav>
-            <nav><a href="#">Mobs PVP</a></nav>
-            <nav><a href="#">Runas</a></nav>
-        </menu>
-    </header>
     <main>
         <section class="comunicado">
             <h2>BEM VINDO INVOCADOR!</h2>
