--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -34,9 +34,9 @@
         </section>
         <hr>
         <section>
-            <div class="primeirospassos">
+            <div class="primeirospassos1">
                 <h3>Primeiros Passos!</h3>
-                <div class="primeirospassos2">
+                <div class="primeirospassos1-2">
                     <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
                     <p>O Summoners War é um jogo muito complexo. Este guia, vai te ajudar a começar do jeito certo! Observe tudo com bastante atenção e utilize todos os recursos e bnus iniciais com clareza. </p>
                 </div>
