nova tag espaçamento

--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
         </menu>
     </header>
     <main>
-        <section class="comunicado">
+        <section class="comunicado" id="espacamento">
             <h2>BEM VINDO INVOCADOR!</h2>
             <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
         </section>
         <hr>
-        <section class="resumo">
+        <section class="resumo"  id="espacamento">
             <img src="imagens/banner-luta.png" alt="" class="imghome">
-
             <h3>Breve Resumo do Jogo!</h3>
             <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena. Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
             <p>O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.</p>
@@ -69,7 +68,6 @@
     <footer>
         <p>Copyright 2023 @ReactAttack - Open License</p>
     </footer>
-
     <script src="scripts/menuHamb.js"></script>
 </body>
 
