--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </menu>
     </header>
     <main>
-        <section class="comunicado" id="espacamento">
+        <section class="comunicado">
             <h2>BEM VINDO INVOCADOR!</h2>
             <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
         </section>
         <hr>
-        <section class="resumo"  id="espacamento">
+        <section class="resumo">
             <img src="imagens/banner-luta.png" alt="" class="imghome">
             <h3>Breve Resumo do Jogo!</h3>
             <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena. Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
