atualização final da pagina

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -20,7 +20,7 @@
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
             <nav><a href="#">Home</a></nav>
-            <nav><a href="#">Guia do Iniciante</a></nav>
+            <nav><a href="guia-do-iniciante.html">Guia do Iniciante</a></nav>
             <nav><a href="#">Guia Trícaru</a></nav>
             <nav><a href="#">Mobs PVE</a></nav>
             <nav><a href="#">Mobs PVP</a></nav>
@@ -46,7 +46,7 @@
                 <p>Sempre olhe o caminho do invocador, ele vai lhe ajudar a completar os mapa mais rápidos.</p>
             </div>
             <div>
-                <img src="imagens/guia-iniciante-mapa-game.png" alt="SW-mapa-mundo" class="imgsw-mundo">
+                <div class="img-box"><img src="imagens/guia-iniciante-mapa-game-p.png" alt="SW-mapa-mundo" class="imgsw-mundo2"></div>
                 <p><strong class="text-blue"> Dica:</strong> adicione amigos e use os monstros representante deles, com dano em área. Ex:  Homunculo de água, Rica, Kaki, Lápis, Sigmarus, Polar, Etc. Use-os de preferência nas fases difíceis.</p>
             </div>
         </section>
@@ -54,7 +54,7 @@
         <section>
             <h3>Eventos de Boas-Vindas Invocador!</h3>
             <div>
-                <img src="#" alt="sw-eventos">
+                <div class="img-box"><img src="imagens/guia-iniciante-evento-boasvindas.png" alt="sw-eventos" class="img-geral"></div>
                 <div>
                     <p>No evento 4º - Escolha o mob <strong class="text-blue">IFRIT (Veromos)</strong> ele te ajudará a fazer a masmorra do dragão.</p>
                     <p><strong class="text-blue">Dica:</strong> No evento que invoca um mob 4*, escolha o <strong class="text-blue">SILF (Tyron)</strong>, ele vai lhe ajudar a completar sua primeira toa normal.</p>
@@ -65,8 +65,8 @@
         <hr>
         <section>
             <h3><a href="#">Mobs de Fusão</a></h3>
-            <div>
-                <img src="#" alt="mobs-fusão">
+            <div class="box">
+                <div class="img-box"><img src="imagens/guia-iniciante-mobs-fusao.png" alt="mobs-fusão" class="img-geral"></div>
                 <div>
                     <p>Alguns mobs são primordiais para seu PVE, um deles é o <strong class="text-blue">Verdehile</strong> e ás <strong class="text-blue">Driad</strong>, com esses mobs, você irá fazer: o Dragão B12, 2ª awaken, raid, etc..</p>
                     <p>Sempre verifique os mobs sumonados, pois podem fazer parte de algum material de fusão - na dúvida olhe no edificio de fusão.</p>
@@ -76,12 +76,12 @@
         </section>
         <hr>
         <section>
-            <h3><a href="#">SD's Importantes (Masmorra Secreta)</a></h3>
+            <h3><a href="#">SD's Importantes</a></h3>
             <div>
-                <img src="#" alt="SDs-importantes">
+                <div class="img-box"><img src="imagens/guia-iniciante-sds-importantes.png" alt="SDs-importantes" class="img-geral"></div>
                 <div>
                     <p>Todas ás sextas e sábados, abrem masmorras de todos elementos. Nelas você encontrará 2 mobs importantes para seu PVE.</p>
-                    <div>
+                    <div class="center">
                         <p><strong>INUGAMI de escuridão (KRO)</strong></p>
                         <p><strong>INUGAMI de luz (Belladeon)</strong></p>
                         <p><strong>VAQUEIRA de luz (LOREN)</strong></p>
@@ -94,7 +94,7 @@
         <section>
             <h3><a href="#">1º Despertar</a></h3>
             <div>
-                <img src="#" alt="1-despertar">
+                <div class="img-box"><img src="imagens/guia-iniciante-1-despertar.png" alt="1-despertar" class="img-geral"></div>
                 <div>
                     <p>Após você conseguir o <strong class="text-blue">KRO</strong>, upar e conseguir por ele 6*. Você irá despertá-lo (2awk).</p>
                     <p>Vá até o portal da dimensão, em Karzan. Vai subindo os andares, até o nível 5.</p>
@@ -109,7 +109,7 @@
             <div>
                 <h3><a href="#">Primeiro Time de Gigante B12</a></h3>
                 <div>
-                    <img src="#" alt="GB12-inicial">
+                    <div class="img-box"><img src="imagens/guia-iniciante-gigante-b12-inicial.png" alt="GB12-inicial" class="img-geral"></div>
                     <div>
                         <p>Seguindo nosso guia de iniciante. Agora com time formado, você começara a fazer gigante b12.</p>
                         <p>Nesta parte do seu pve, você vai precisar farma bastante para conseguir as runas: Swifth, Blade, Fatal. </p>
@@ -120,7 +120,7 @@
             <div>
                 <h3><a href="#">Time de DOT para Gigante B12</a></h3>
                 <div>
-                    <img src="#" alt="GB12-dot">
+                    <div class="img-box"><img src="imagens/guia-iniciante-gigante-b12-dot.png" alt="GB12-dot" class="img-geral"></div>
                     <div>
                         <p>Existe o time speed, para fazer gigante b12 em menos de 1min. Porém, irá atrasar um pouco seu Dragão B12.</p>
                         <p><strong class="text-blue">Time:</strong> Fran(L), Sath, Driads e Tatu.</p>
@@ -133,7 +133,7 @@
         <section>
             <h3><a href="#">Primeiro Dragão B12</a></h3>
             <div>
-                <img src="#" alt="">
+                <div class="img-box"><img src="imagens/guia-iniciante-dragao-b12-inicial.png" alt="" class="img-geral"></div>
                 <div>
                     <p>Além do time de tricaru, tem um inicial, para fazer seu D12, antes de você consegui, fazer o famoso time tricaru.</p>
                     <p><strong class="text-blue">Time:</strong> Verd(L), Bella, Vero,Sig ou Loren e Spectra</p>
@@ -145,7 +145,7 @@
         <section>
             <h3><a href="#">Asas de Arena</a></h3>
             <div>
-                <img src="#" alt="">
+                <div class="img-box"><img src="imagens/guia-iniciante-arena.png" alt="" class="img-geral"></div>
                 <div>
                     <p><strong class="text-blue">Dica de ouro:</strong> Sempre que você upa de level, suas energias de arena, resetam. Então antes de upar, jogue na arena, os pontos de arena, servem para evoluir os totens de atributo. </p>
                     <p>Os bufs do totem, são globais e primordial, pro seu pve. ficará mais safe.</p>
@@ -153,7 +153,6 @@
                 </div>
             </div>
         </section>
-        <hr>
     </main>
     <section class="contato">
         <div id="contato2">
