--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
             <nav><a href="#">Home</a></nav>
-            <nav><a href="#">Guia do Iniciante</a></nav>
+            <nav><a href="guia-do-iniciante.html">Guia do Iniciante</a></nav>
             <nav><a href="#">Guia Trícaru</a></nav>
             <nav><a href="#">Mobs PVE</a></nav>
             <nav><a href="#">Mobs PVP</a></nav>
