--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -17,12 +17,12 @@
     <header>
         <span class="material-icons" id="menuHamb">menu</span>
         <menu id="menu">
-            <nav><a href="#">Home</a></nav>
-            <nav><a href="#">Guia do Iniciante</a></nav>
-            <nav><a href="#">Guia Trícaru</a></nav>
-            <nav><a href="#">Mobs PVE</a></nav>
-            <nav><a href="#">Mobs PVP</a></nav>
-            <nav><a href="#">Runas</a></nav>
+            <nav><a href="index.html">Home</a></nav>
+            <nav><a href="guia-do-iniciante.html">Guia do Iniciante</a></nav>
+            <nav><a href="guia-tricaru.html">Guia Trícaru</a></nav>
+            <nav><a href="mobs-pve.html">Mobs PVE</a></nav>
+            <nav><a href="mobs-pvp.html">Mobs PVP</a></nav>
+            <nav><a href="runas.html">Runas</a></nav>
         </menu>
     </header>
     <main>
