nova pagina tricaru

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="styles/screens.css" media="screen and (min-width:768px)">
     <title>SW - ReactAttack</title>
 </head>
-
 <body>
     <div class="painel-banner">
         <img src="#" alt="">
@@ -35,7 +34,7 @@
         <hr>
         <section>
             <div class="primeirospassos1">
-                <h3>Primeiros Passos!</h3>
+                <h3 class="text-blue">Primeiros Passos!</h3>
                 <div class="primeirospassos1-2">
                     <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
                     <p>O Summoners War é um jogo muito complexo. Este guia, vai te ajudar a começar do jeito certo! Observe tudo com bastante atenção e utilize todos os recursos e bnus iniciais com clareza. </p>
