--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -26,15 +26,26 @@
         </menu>
     </header>
     <main>
-        <section></section>
+        <section class="comunicado">
+            <h2>ABAIXO FALAREMOS SOBRE COMO FAZER SEU TIME TRICARU</h2>
+        </section>
+        <hr>
+        <section>
+            <h2>O Tricaru</h2>
+            <p>Time composto por 3 Icarus e 1 Verdehile</p>
+            <div class="box-img-verde">
+                <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde-tricarus">
+            </div>    
+            <div class="box-img-tricaru">
+                <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+                <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
+            </div>
+        </section>
         <hr>
         <section></section>
         <hr>
         <section></section>
-        <hr>
-        <section></section>
-        <hr>
-    </main>
     <section class="contato">
         <div id="contato2">
             <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
