adaptação de conteudo

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -31,8 +31,7 @@
         </section>
         <hr>
         <section>
-            <h2>O Tricaru</h2>
-            <p>Time composto por 3 Icarus e 1 Verdehile</p>
+            <h3>O Tricaru</h3>
             <div class="box-img-verde">
                 <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde-tricarus">
             </div>    
@@ -41,12 +40,14 @@
                 <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
                 <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
             </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae non officiis itaque dolore molestiae ipsam excepturi pariatur iusto aspernatur soluta impedit velit sint, odio expedita voluptatibus optio et tempora quos.  </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur debitis ratione assumenda magni libero quae ut delectus, omnis consectetur nesciunt totam, modi obcaecati accusamus rem a dolorum iste, eligendi doloribus. </p>
         </section>
         <hr>
         <section></section>
         <hr>
         <section></section>
-    <section class="contato">
+        <section class="contato">
         <div id="contato2">
             <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
             <div class="sobrenos">
