nova atualização pagina tricaru

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -40,8 +40,19 @@
                 <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
                 <img src="imagens/guia-tricaru-icaru.png" alt="" class="imgs-tricaru">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae non officiis itaque dolore molestiae ipsam excepturi pariatur iusto aspernatur soluta impedit velit sint, odio expedita voluptatibus optio et tempora quos.  </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur debitis ratione assumenda magni libero quae ut delectus, omnis consectetur nesciunt totam, modi obcaecati accusamus rem a dolorum iste, eligendi doloribus. </p>
+            <p>Para esse time funcionar, os icarus precisam estar runados de acordo com a sua defesa, que os façam conseguir puxar 3 monstros. Para isso é necessário uma quantia de defesa especifica.</p>
+        
+            <div class="box-imgs-runa-skill">
+                <img src="imagens/guia-tricaru-icaru-runas-fullguard.png" alt="" class="img-fullguard" >
+                <img src="imagens/guia-tricaru-icaru-skill.png" alt="" class="img-tricaru-skill">
+            </div>
+            <p>Abaixo está uma parte da tabela de def% dos icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
+            <div class="box-tabelas">
+                <img src="imagens/guia-tricaru-tabela-metade.png" alt="" class="tabela-tricaru-metade" >
+                <img src="imagens/guia-tricaru-tabela.png" alt="" class="tabela-tricaru">
+            </div>
+            <p>Clique em <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela do Tricaru</strong></i></a> para baixar a tabela completa.</p>
+
         </section>
         <hr>
         <section></section>
