--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -46,13 +46,13 @@
                 <img src="imagens/guia-tricaru-icaru-runas-fullguard.png" alt="" class="img-fullguard" >
                 <img src="imagens/guia-tricaru-icaru-skill.png" alt="" class="img-tricaru-skill">
             </div>
-            <p>Abaixo está uma parte da tabela de def% dos icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
+            <p>Abaixo está uma parte da tabela de Def% dos icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
             <div class="box-tabelas">
                 <img src="imagens/guia-tricaru-tabela-metade.png" alt="" class="tabela-tricaru-metade" >
                 <img src="imagens/guia-tricaru-tabela.png" alt="" class="tabela-tricaru">
             </div>
-            <p>Clique em <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela do Tricaru</strong></i></a> para baixar a tabela completa.</p>
-
+            <p>Clique em <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela de Defesa dos Icarus</strong></i></a> para baixar a tabela completa.</p>
+            <p><strong class="text-blue">Obs.:</strong> Caso sua guild não tenha o bônus de 5%, aumente a defesa dos tricarus.</p>
         </section>
         <hr>
         <section></section>
