nova tag "img" com propriedades padroes

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -45,7 +45,10 @@
                 <p>Sempre olhe o caminho do invocador, ele vai lhe ajudar a completar os mapa mais rápidos.</p>
             </div>
             <div>
-                <div class="img-box"><img src="imagens/guia-iniciante-mapa-game-p.png" alt="SW-mapa-mundo" class="imgsw-mundo2"></div>
+                <div class="img-box">
+                    <img src="imagens/guia-iniciante-mapa-game.png" alt="" class="imgsw-mundo">
+                    <img src="imagens/guia-iniciante-mapa-game-p.png" alt="SW-mapa-mundo" class="imgsw-mundo2">
+                </div>
                 <p><strong class="text-blue"> Dica:</strong> adicione amigos e use os monstros representante deles, com dano em área. Ex:  Homunculo de água, Rica, Kaki, Lápis, Sigmarus, Polar, Etc. Use-os de preferência nas fases difíceis.</p>
             </div>
         </section>
@@ -85,7 +88,7 @@
                         <p><strong>INUGAMI de luz (Belladeon)</strong></p>
                         <p><strong>VAQUEIRA de luz (LOREN)</strong></p>
                     </div>
-                    <p>Vão te ajudar em: Raid, gigante, dragão, 2awk, pve, pvp, etc.</p>
+                    <p>Estes mobs iram te ajudar em: Raid, gigante, dragão, 2awk, pve, pvp, etc.</p>
                 </div>
             </div>
         </section>
