--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -46,16 +46,32 @@
                 <img src="imagens/guia-tricaru-icaru-runas-fullguard.png" alt="" class="img-fullguard" >
                 <img src="imagens/guia-tricaru-icaru-skill.png" alt="" class="img-tricaru-skill">
             </div>
-            <p>Abaixo está uma parte da tabela de Def% dos icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
+        </section>
+        <hr>        
+        <section>
+            <h3>Tabela de Def% para criar os Icarus!</h3>
+            <p>Abaixo está uma parte da tabela de Def% dos Icarus de acordo com o level dos <i>totem de defesa</i>, bônus de guild e o número de sets de runas determination:</p>
             <div class="box-tabelas">
                 <img src="imagens/guia-tricaru-tabela-metade.png" alt="" class="tabela-tricaru-metade" >
                 <img src="imagens/guia-tricaru-tabela.png" alt="" class="tabela-tricaru">
             </div>
-            <p>Clique em <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela de Defesa dos Icarus</strong></i></a> para baixar a tabela completa.</p>
+            <p class="clique-aqui-tricaru">Clique em: <a href="imagens/guia-tricaru-tabela.png" download="Tabela-Tricaru"><i><strong class="text-blue">Tabela de Defesa dos Icarus</strong></i></a> para baixar a tabela completa.</p>
             <p><strong class="text-blue">Obs.:</strong> Caso sua guild não tenha o bônus de 5%, aumente a defesa dos tricarus.</p>
         </section>
         <hr>
-        <section></section>
+        <section>
+            <h3>Montando seu Verdehile pro Tricaru</h3>
+            <div class="box-img-verde">
+                <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde">
+            </div>
+            <p>As runas são baseadas na passiva do verd. Quanto maior o Dano crítco e o atk, mais ele cura. A taxa crítica do verd, tem que ser 100%. Para que a barra de atak dos mobs, encha e faça ganhar turnos.</p>
+            <p>Recomenda-se por set de <strong>Rage/Blade</strong>, mas pode-se usar set <strong>Fatal/Blade</strong> ou <strong>Violet/Blade</strong>.</p>
+             <div class="box-img-verde">
+                <img src="imagens/guia-tricaru-verdehile-runas.png" alt="" class="img-verde-runas">
+
+             </div>   
+            <p>Podemos usar tabém, set quebrado. Desde que esteja com os status da imagem ao lado, ou próximo a eles.</p>
+        </section>
         <hr>
         <section></section>
         <section class="contato">
