correção de erro .contato

--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -70,10 +70,31 @@
                 <img src="imagens/guia-tricaru-verdehile-runas.png" alt="" class="img-verde-runas">
 
              </div>   
-            <p>Podemos usar tabém, set quebrado. Desde que esteja com os status da imagem ao lado, ou próximo a eles.</p>
+            <p>Podemos runar também com set quebrado. Desde que esteja com os status da imagem ou próximo desses status.</p>
         </section>
         <hr>
-        <section></section>
+        <section>
+            <h3>Hora de por em prática!</h3>
+            <p>Agora veremos na prática como funciona o Tricaru no: Dragão B12, Cripta B10 e Necro B12. </p>
+            <div class="text-center">
+                <p><strong>Dragão B12</strong></p>
+                <div id="video-tricaru">
+                        <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/QVWXSu35cvk" title="SW - ReactAttack - Tricaru no DB12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
+                </div>
+            </div>
+            <div class="text-center">
+                <p><strong>Necro B12</strong></p>
+                <div id="video-tricaru">
+                    <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/wB94zHwwkRg" title="SW - ReactAttack - Tricaru no Necro B12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="text-center">
+                <p><strong>Cripta B10</strong></p>
+                <div id="video-tricaru">
+                    <iframe width="280vw" height="300vh" src="https://www.youtube.com/embed/DGbsHmieG5w" title="SW - ReactAttack - Tricaru na Cripta B10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
         <section class="contato">
         <div id="contato2">
             <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
