--- a/guia-homunculos.html
+++ b/guia-homunculos.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/principal.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/guia-homunculos.css">
     <link rel="stylesheet" href="styles/screens.css" media="screen and (min-width:768px)">
     <title>SW - ReactAttack</title>
 </head>
+
 <body>
     <div class="painel-banner">
         <img src="#" alt="">
@@ -29,27 +29,33 @@
     </header>
     <main>
         <section class="comunicado">
-            <h2>BEM VINDO INVOCADOR!</h2>
-            <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
+            <h2>ABAIXO FALAREMOS SOBRE COMO FAZER OS HOMÚNCULUS</h2>
         </section>
         <hr>
-        <section class="resumo">
-            <img src="imagens/banner-luta.png" alt="" class="imghome">
-            <h3>Breve Resumo do Jogo!</h3>
-            <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena. Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
-            <p>O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.</p>
-            <p> Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o bom e velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas vezes você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.</p>
-        </section>
-        <hr>
-        <section class="video">
-            <div id="video-home">
-                <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
-                    title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen>
-                </iframe>
+        <section>
+            <h3 class="text-center">HOMÚNCULUS</h3>
+            <p class="text-center"><i>O Homunculo é um monstro especial, que só pode ser obtido por meio de criação.</i></p>
+            <div class="box-imgs-homo-all">
+               <img src="imagens/guia-homunculos-all.png" alt="" class="img-homo-all">
             </div>
+            <p>Cada um deles, tem seu objetivo em particular e como elemento temos: FOGO, VENTO e ÁGUA (destinados ao ataque). Além deles, temos o de LUZ e ESCURIDÂO (Suportes). O mais usado é o do elemento água, que serve para pve, mais precisamente para subir toa hard.</p>
+            <p>Para invocar seu primeiro homúnculo de FOGO, ÁGUA OU VENTO, vai precisar farma alguns cristais, nas bestas elementais - <i>Portal de Outros Mundos</i>. </p>
+            <p>Quantidade de cristais necessários:</p>
+            <div class="lista">
+                <ul class="text-center">
+                    <li>100 Cristais de Água</li>
+                    <li>300 Cristais de Fogo</li>
+                    <li>100 Cristais de Vento</li>
+                    <li>200 Cristais Mágicos</li>
+                </ul>
+            </div>
+            
         </section>
+        <hr>
+        <section></section>
+        <hr>
+        <section></section>
+        <hr>
     </main>
     <section class="contato">
         <div id="contato2">
@@ -71,5 +77,4 @@
     </footer>
     <script src="scripts/menuHamb.js"></script>
 </body>
-
 </html>
