finalização da pagina homunculus

--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -30,12 +30,12 @@
     <main>
         <section class="comunicado">
             <h2>O GUIA ABAIXO TE AJUDARÁ NA SUA JORNADA!</h2>
-            <h3><i><strong>"Que A Força Esteja Com Você"</strong></i></h3>
+            <p class="text-center"><i>"Que A Força Esteja Com Você"</i></p>
         </section>
         <hr>
         <section>
             <div class="primeirospassos1">
-                <h3 class="text-blue2">Primeiros Passos!</h3>
+                <h3>Primeiros Passos!</h3>
                 <div class="primeirospassos1-2">
                     <img src="imagens/guia-iniciante-logo-sw.png" class="imgsw-logo">
                     <p>O Summoners War é um jogo muito complexo. Este guia, vai te ajudar a começar do jeito certo! Observe tudo com bastante atenção e utilize todos os recursos e bnus iniciais com clareza. </p>
