--- a/guia-homunculos.html
+++ b/guia-homunculos.html
@@ -33,7 +33,7 @@
         </section>
         <hr>
         <section>
-            <h3 class="text-center">HOMÚNCULUS</h3>
+            <h3>Os Homúnculus</h3>
             <p class="text-center"><i>O Homunculo é um monstro especial, que só pode ser obtido por meio de criação.</i></p>
             <div class="box-imgs-homo-all">
                <img src="imagens/guia-homunculos-all.png" alt="" class="img-homo-all">
@@ -49,13 +49,31 @@
                     <li>200 Cristais Mágicos</li>
                 </ul>
             </div>
-            
         </section>
         <hr>
-        <section></section>
+        <section>
+            <h3>Qual o primeiro homúnculo que irá invocar?</h3>
+            <div class="box-img-homo">
+                <img src="imagens/guia-homunculos-fogo-agua.png" alt="" class="img-fogo-agua"> 
+            </div>
+            <p>Primeiro homúnculo que você vai invocar é o de FOGO. Logo após invocá-lo, ganhará um pergaminho que vai poder resetar as habilidades. Assim poderá escolher o de água.</p>
+            <div class="box-img-pergaminho">
+                <img src="imagens/guia-homunculos-pergaminho-reset.png" alt="" class="img-pergaminho">
+            </div>
+            <p><strong class="text-blue">Obs.:</strong> Para saber, quais times usar para conseguir os cristais, acesse o <a href="#"><i>Guia de Bestas Elementares</i></a>.</p>
+        </section>
         <hr>
-        <section></section>
-        <hr>
+        <section>
+            <h3>Montando sua árvore dos homúnculos</h3>
+            <div class="box-img-agua">
+                <img src="imagens/guia-homunculos-agua.png" alt="" class="img-agua">
+                <img src="imagens/guia-homunculos-agua-build.png" alt="" class="img-agua-build">
+            </div>
+            <div class="box-img-escuridao">
+                <img src="imagens/guia-homunculos-dark.png" alt="" class="img-escuridao">
+                <img src="imagens/guia-homunculos-dark-build.png" alt="" class="img-escuridao-build">
+            </div>
+        </section>
     </main>
     <section class="contato">
         <div id="contato2">
