--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="comunicado">
             <h2>BEM VINDO INVOCADOR!</h2>
-            <h3>ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</h3>
+            <p class="text-center">ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</p>
         </section>
         <hr>
         <section class="resumo">
